<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/string1"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_BT1"
        android:id="@+id/button"
        android:onClick="clickButton1"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignStart="@+id/button6"
        android:layout_alignRight="@+id/button6"
        android:layout_alignEnd="@+id/button6"
        android:backgroundTint="#F08C35" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_BT2"
        android:id="@+id/button2"
        android:onClick="clickButton2"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignStart="@+id/button6"
        android:layout_alignRight="@+id/button6"
        android:layout_alignEnd="@+id/button6"
        android:backgroundTint="#F08C35" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_BT3"
        android:id="@+id/button3"
        android:onClick="clickButton3"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignStart="@+id/button6"
        android:layout_alignRight="@+id/button6"
        android:layout_alignEnd="@+id/button6"
        android:backgroundTint="#F08C35" />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_BT4"
        android:id="@+id/button4"
        android:onClick="clickButton4"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignStart="@+id/button6"
        android:layout_alignRight="@+id/button6"
        android:layout_alignEnd="@+id/button6"
        android:backgroundTint="#F08C35" />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_BT5"
        android:id="@+id/button5"
        android:onClick="clickButton5"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignStart="@+id/button6"
        android:layout_alignRight="@+id/button6"
        android:layout_alignEnd="@+id/button6"
        android:backgroundTint="#F08C35" />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_BT6"
        android:id="@+id/button6"
        android:onClick="clickButton6"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#F08C35" />

</RelativeLayout>
